Thu Nov 13 12:55:29 GMT 2003  Tony Gale <gale@gtk.org>

	* docs/faq/gtk-faq.sgml: Update the rest of Section 2

Thu Nov 13 01:46:32 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkicontheme.c (gtk_icon_theme_init): Use 
	GTK_DATADIR/{icons,pixmaps} instead of 
	GTK_DATA_PREFIX/{icons,pixmaps}.  (#123365, Marco Pesenti Gritti)

Wed Nov 12 21:40:10 2003  Matthias Clasen  <maclas@gmx.de>

	Changes to improve menu positioning on Xinerama (#108328, #126150):
	
	* gtk/gtkmenuitem.c (gtk_menu_item_position_menu): Use the event 
	window of the menuitem to determine the monitor. This fixes some

	* gtk/gtkmenu.c (struct _GtkMenuPrivate): Add a menu_num field
	to store the monitor on which the menu is to be positioned.

	* gtk/gtkmenu.[hc] (gtk_menu_position): Store the monitor number
	in the GtkMenuPrivate struct and fetch the monitor geometry after
	calling the position_func, in case it has been changed.

	* gtk/gtkmenu.c (gtk_menu_set_monitor): New function 
	to be used in GtkMenuPositionFunc implementations for setting
	the monitor_num field in GtkMenuPrivate.

	* gtk/gtkmenuitem.c (gtk_menu_item_position_menu): Call 
	gtk_menu_set_monitor.

Wed Nov 12 21:00:10 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkinputdialog.c (gtk_input_dialog_init): Clarify the
	label for the empty list. String change.  (#95446, Tomas Ögren)

Wed Nov 12 20:57:50 2003  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkicontheme.h (enum GtkIconLookupFlags): Correct
	the definition of the values.  (#123361, Marco Pesenti Gritti)

Wed Nov 12 20:54:02 2003  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdkkeyuni.c: Map KP_Separator to ','.
	(#122941, Egmont Koblinger)

2003-11-12  Padraig O'Briain  <padraig.obriain@sun.com>

	*gtk/gtkcolorsel.c (gtk_color_selection_init): Add tooltip for
	opacity entry widget. Change tooltip for opacity widgets. (#126426)

2003-11-12  Padraig O'Briain  <padraig.obriain@sun.com>

	* gtk/gtkmenu.c (gtk_menu_popup): Do not let pointer position