@@ -1,3 +1,8 @@
+2003-11-15  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/win32/gdkwindow-win32.c (gdk_window_focus): If the window is
+	maximized, use SW_SHOWMAXIMIZED. (#126986, John Ehresman)
+
 Thu Nov 13 12:55:29 GMT 2003  Tony Gale <gale@gtk.org>
 
 	* docs/faq/gtk-faq.sgml: Update the rest of Section 2
